==> contemplator1998/ADOS/TouchPanel/TouchPanel.c <==
#include "TouchPanel.h"
#define THRESHOLD 2

void TP_Init(void) 
{ 

	GPIO_InitTypeDef GPIO_InitStructure;
	//EXTI_InitTypeDef   EXTI_InitStructure;
	//NVIC_InitTypeDef   NVIC_InitStructure;
	
	RCC_AHB1PeriphClockCmd(Open_SPI_SCK_GPIO_CLK | Open_SPI_MISO_GPIO_CLK | Open_SPI_MOSI_GPIO_CLK,ENABLE);
	
	RCC_AHB1PeriphClockCmd(Open_TP_CS_CLK | Open_TP_IRQ_CLK,ENABLE);
	Open_SPI_CLK_INIT(Open_RCC_SPI,ENABLE);

	GPIO_PinAFConfig(Open_SPI_SCK_GPIO_PORT,  Open_SPI_SCK_SOURCE,  Open_GPIO_AF_SPI);
	GPIO_PinAFConfig(Open_SPI_MISO_GPIO_PORT, Open_SPI_MISO_SOURCE, Open_GPIO_AF_SPI);
	GPIO_PinAFConfig(Open_SPI_MOSI_GPIO_PORT, Open_SPI_MOSI_SOURCE, Open_GPIO_AF_SPI);

	GPIO_InitStructure.GPIO_Pin = Open_SPI_SCK_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;  
	GPIO_Init(Open_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = Open_SPI_MISO_PIN;
	GPIO_Init(Open_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = Open_SPI_MOSI_PIN;
	GPIO_Init(Open_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);


   /* TP_CS  */
   GPIO_InitStructure.GPIO_Pin = Open_TP_CS_PIN;
   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
   GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
   GPIO_Init(Open_TP_CS_PORT, &GPIO_InitStructure);

  
    /*TP_IRQ */
	GPIO_InitStructure.GPIO_Pin = Open_TP_IRQ_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN ;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	//GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_Init(Open_TP_IRQ_PORT, &GPIO_InitStructure);	
	
	TP_CS(1); 
  ADS7843_SPI_Init(); 
	
	if (LoadCalibrate() == false)
	{
			TouchPanel_Calibrate();
	}
	
	/* EXTI */
	
	/* Connect EXTI Line5 to PC5 pin */
  //SYSCFG_EXTILineConfig(EXTI_PortSourceGPIOC, EXTI_PinSource5);
	
	/* Configure EXTI Line5 */
   //EXTI_InitStructure.EXTI_Line = EXTI_Line5;
   //EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
   //EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;  
   //EXTI_InitStructure.EXTI_LineCmd = ENABLE;
   //EXTI_Init(&EXTI_InitStructure);

  /* Enable and set EXTI Line0 Interrupt to the lowest priority */
	//NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;
  // NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x0;
  // NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0;
  // NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  // NVIC_Init(&NVIC_InitStructure);
}

static void WR_CMD (uint8_t cmd)  
{ 
  /* Wait for SPI3 Tx buffer empty */ 
  while (SPI_I2S_GetFlagStatus(Open_SPI, SPI_I2S_FLAG_TXE) == RESET); 
  /* Send SPI3 data */ 
  SPI_I2S_SendData(Open_SPI,cmd); 
  /* Wait for SPI3 data reception */ 
  while (SPI_I2S_GetFlagStatus(Open_SPI, SPI_I2S_FLAG_RXNE) == RESET); 
  /* Read Open_SPI received data */ 
  SPI_I2S_ReceiveData(Open_SPI); 
}

void DrawCross(uint16_t Xpos,uint16_t Ypos)
{
  GUI_Line(Xpos-15,Ypos,Xpos-2,Ypos,0xffff);
  GUI_Line(Xpos+2,Ypos,Xpos+15,Ypos,0xffff);
  GUI_Line(Xpos,Ypos-15,Xpos,Ypos-2,0xffff);
  GUI_Line(Xpos,Ypos+2,Xpos,Ypos+15,0xffff);
  
  GUI_Line(Xpos-15,Ypos+15,Xpos-7,Ypos+15,RGB(184,158,131));
  GUI_Line(Xpos-15,Ypos+7,Xpos-15,Ypos+15,RGB(184,158,131));

  GUI_Line(Xpos-15,Ypos-15,Xpos-7,Ypos-15,RGB(184,158,131));
  GUI_Line(Xpos-15,Ypos-7,Xpos-15,Ypos-15,RGB(184,158,131));

  GUI_Line(Xpos+7,Ypos+15,Xpos+15,Ypos+15,RGB(184,158,131));
  GUI_Line(Xpos+15,Ypos+7,Xpos+15,Ypos+15,RGB(184,158,131));

  GUI_Line(Xpos+7,Ypos-15,Xpos+15,Ypos-15,RGB(184,158,131));
  GUI_Line(Xpos+15,Ypos-15,Xpos+15,Ypos-7,RGB(184,158,131));	  	
}
